Vagrant with provisioning

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,6 @@
 # see: https://github.com/laserlemon/figaro
 # Ignore application configuration
 /config/application.yml
+
+# Vagrant stuff
+.vagrant/
